fixed alignment

--- a/homework/hw2/css/styles.css
+++ b/homework/hw2/css/styles.css
@@ -27,23 +27,26 @@ footer {
   padding: 0 4px;
 }
 
+/* Create two equal columns that sits next to each other */
 .column {
   text-align: center;
-  flex: 20%;
+  flex: 50%;
   padding: 0 4px;
 }
 
 .column img {
-  top: 2px;
+  margin: 8px;
   vertical-align: middle;
   width: 175px;
 }
 
 .funfact {
-  margin: auto;
+  text-align: center;
   font-size: 1.2em;
   color: #7d4ae2;
   text-decoration: underline;
+  margin: auto;
+
 }
 
 .fly img {
